--- a/style/app.css
+++ b/style/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css'); 
 
 @tailwind base;
 @tailwind components;
